retrieveUnpackaged/objects/Snippet__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>Submission__r.Agency_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Status__c</fullName>
        <label>Comment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Snippet Entered</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Snippet Entry Verified</fullName>
                </value>
                <value>
                    <fullName>Ready for Agency Review</fullName>
                </value>
                <value>
                    <fullName>Comment Added</fullName>
                </value>
                <value>
                    <fullName>Addressed in Essay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commenter_Category__c</fullName>
        <formula>Text(Submission__r.Commenter_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commenter Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commenter_Name__c</fullName>
        <formula>Submission__r.Commenter_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commenter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extracted_Text__c</fullName>
        <label>Extracted Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDF_Page__c</fullName>
        <label>PDF Page</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Reference__c</fullName>
        <label>Related Reference</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relevant_Essays__c</fullName>
        <label>Relevant Essays</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Snippet_Status__c</fullName>
        <label>Snippet Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Snippet Entered</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Snippet Entry Verified</fullName>
                </value>
                <value>
                    <fullName>Ready for Agency Review</fullName>
                </value>
                <value>
                    <fullName>Comment Added</fullName>
                </value>
                <value>
                    <fullName>Addressed in Essay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Number__c</fullName>
        <formula>Submission__r.Submission_Number__c</formula>
        <label>Submission Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipLabel>Snippets</relationshipLabel>
        <relationshipName>Snippets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Substantive__c</fullName>
        <formula>Text(Submission__r.Have_Snippets__c)</formula>
        <label>Substantive?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <formula>Topic__r.Topic_Name__c</formula>
        <label>Topic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipName>Substantive_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Snippet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Submission_Number__c</columns>
        <columns>Topic_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Snippet_Status__c</columns>
        <columns>Extracted_Text__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SBC-{000000}</displayFormat>
        <label>Snippet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snippets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>